[FIX] => date not showing on mobile devices
[FIX] => DateInput not filling its container width

--- a/dream-diary/src/components/DateInput/DateInput.module.css
+++ b/dream-diary/src/components/DateInput/DateInput.module.css
@@ -10,6 +10,8 @@
 
   padding: 0.5rem;
 
+  inline-size: 100%;
+
   &:focus {
     outline: 2px solid var(--color-primary-outline);
   }
